# origin

./: README.md
Lesson 1/Task 1/Getting to Know Visual Studio 2022/: Getting to Know Visual Studio 2022.cpp  Getting to Know Visual Studio 2022.sln  Getting to Know Visual Studio 2022.vcxproj  Getting to Know Visual Studio 2022.vcxproj.filters
Lesson 10/Task 1/: CMakeLists.txt  my_first_cmake_project.cpp
Lesson 10/Task 2/: CMakeLists.txt  Quadrilateral.h  Rectangle.h  Square.cpp
Lesson 2/Task 1/Months/: MainCode.cpp  Months.sln  Months.vcxproj  Months.vcxproj.filters
Lesson 2/Task 2/Accounts/: Accounts.sln  Accounts.vcxproj  Accounts.vcxproj.filters  AccountsCode.cpp
Lesson 2/Task 3/Structure output/: Project1.vcxproj  Structure output.cpp  Structure output.sln
Lesson 3/Task 1/Calculator/: Calculator.sln  Calculator.vcxproj  calculator.cpp
Lesson 3/Task 2/Counter/: Counter.sln  Counter.vcxproj  Counter.vcxproj.filters  CounterCode.cpp
Lesson 4/Task 1/Addresses/: Addresses.sln  Addresses.vcxproj  Addresses.vcxproj.filters  AddressesCode.cpp
Lesson 4/Task 2/Sorting addresses/: Sorting addresses.sln  Sorting addresses.vcxproj  Sorting addresses.vcxproj.filters  sortingAddresses.cpp
Lesson 5/Task 1/Figures. Number of sides/: Figures. Number of sides.cpp  Figures. Number of sides.sln  Figures. Number of sides.vcxproj
Lesson 5/Task 2/Figures. Sides and corners/: Figures. Sides and corners.cpp  Figures. Sides and corners.sln  Figures. Sides and corners.vcxproj
Lesson 5/Task 3/Figures. Methods/: Figures. Methods.cpp  Figures. Methods.sln  (+1 more)
(+60 files in other folders)
